--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.0",
     "@types/redis": "^4.0.11",
+    "hbs": "^4.2.0",
+    "jquery-csv": "^1.0.21",
+    "mysql": "^2.18.1",
     "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
