--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.0",
     "@types/redis": "^4.0.11",
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "hbs": "^4.2.0",
     "jquery-csv": "^1.0.21",
     "mysql": "^2.18.1",
